# RayForce

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md
RayForce/: CMakeLists.txt
RayForce/RayForce/: RayForce.h
RayForce/RayForce/src/: globals.h  window.cpp  window.h
RayForce/RayForce/src/elements/: entity.cpp  entity.h  scene.cpp  scene.h
RayForce/RayForce/src/managers/: model.cpp  model.h  physics.cpp  physics.h  render.cpp  render.h  scenes.cpp  scenes.h  shader.cpp  shader.h
RayForce/examples/advanced/01_stress_test/: main.cpp
RayForce/examples/advanced/01_stress_test/resources/: models.list
RayForce/examples/advanced/02_bridge/: CMakeLists.txt
RayForce/examples/basic/00_basic_window/: main.cpp
RayForce/examples/basic/01_basic_scene/: main.cpp
RayForce/examples/basic/02_basic_entity/: main.cpp
RayForce/examples/basic/03_basic_hitbox/: main.cpp
RayForce/examples/basic/04_hitbox_from_model/: CMakeLists.txt  main.cpp
RayForce/examples/basic/04_hitbox_from_model/resources/: shaders.list
RayForce/examples/physics demo/: main.cpp  test.h  testEntity.cpp  testEntity.h
RayForce/resources/: models.list
RayForce/resources/shaders/: basic.fs  basic.vs  instancing.vs
RayForce/src/: globals.h  main.cpp  window.cpp
RayForce/src/entities/: entity.cpp  entity.h  testEntity.cpp  testEntity.h
RayForce/src/managers/: model.cpp  physics.cpp  render.cpp  scenes.cpp
RayForce/src/scenes/: scene.cpp  scene.h  test.cpp  test.h
